# COMBINATOR

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.md
.github/workflows/: master.yml
app/: GLOBAL.py  TARGETS.py  mail.py
app/API/: intervals.py  positions.py
app/apps/: calculation.py
app/apps/signals/: FOMO.py  RSI.py  STOCH_RSI.py
app/callbacks/: signals_callback.py
app/callbacks/schema/: fomo.py  rsi.py  stochRSI.py
conf/: conf_redis.py  settings.py
