[tool.poetry]
name = "combinator"
version = "0.1.0"
description = ""
authors = ["Professional <pyostr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
klines = {git = "https://github.com/pyostr-traiding/klines.git"}
telebot = "^0.0.5"
pydantic = "^2.12.2"
pika = "^1.3.2"
redis = "^6.4.0"
dotenv = "^0.9.9"
aiohttp = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
