[project]
name = "combinator"
version = "0.1.0"
description = ""
authors = [
    {name = "www",email = "pyostr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "telebot (>=0.0.5,<0.0.6)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "klines @ git+https://github.com/pyostr-traiding/klines.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
